tests/vendor/valid/simple/short_circuit_or.c
//expect 0
//tags: simple, short-circuit
int main() {
    int a = 0;
    1 || (a = 1);
    return a;
}