tests/vendor/invalid/syntax/paren_mismatch.c
//tags: simple, loop
int main() {
    for (int i = 2; ))
        int a = 0;
}